# Webhook_transactions

./: .env-temp  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test_on_push.yaml
alembic/: env.py
alembic/versions/: 2025_02_03_1154-9feabcb5f841_create_table_users.py  2025_02_03_1215-aae2a19e432c_create_table_users.py  2025_02_03_1656-d7e4d79b7fa4_create_table_scores.py  2025_02_03_1713-96726a03bcb0_create_table_payments.py  2025_02_10_1944-817f7786f396_add_in_table_scores_account_number.py  2025_02_15_0909-ed4699c5bbb3_change_format_amount_in_table_payments.py
consumer/: Dockerfile  config.py  database.py  requirements.txt  transactions.py
docker/: app.sh  create_users.sh
nginx/: nginx.conf
src/: main.py  models.py
src/consumer/: config.py  models.py  transactions.py
src/core/: config.py  database.py  depends.py  exceptions.py  jwt_utils.py
src/payments/: crud.py  models.py  routers.py  schemas.py
src/users/: crud.py  models.py  routers.py  schemas.py
src/utils/: create_account_number.py  create_users.py  processing.py  webhook.py
src/webhooks/: __init__.py  payments.py
tests/: conftest.py  pytest.ini  test_payments.py  test_transaction.py  test_user.py
