[tool.poetry]
name = "library management"
version = "0.1.0"
description = ""
authors = ["SRubtsov <frexrub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
pydantic = {extras = ["email"], version = "^2.10.5"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
pydantic-async-validation = "^0.3.0"
fastapi-pagination = "^0.12.34"
pytest-asyncio = "^0.25.2"
aiosqlite = "^0.20.0"
httpx = "0.27.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
